# adv-lens

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_BRIEF.md  README.md  docker-compose.yml  pyproject.toml  research-report.md
.claude/: settings.json
.github/workflows/: ci.yml
docs/: architecture.md  build-pdf.sh  compliance.md  demo-playbook.md  parking-lot.md  user-manual-print.css  user-manual.html  user-manual.md
docs/adr/: 0001-stack-choices.md  0002-data-sources.md  0003-segmenter-strategy.md  0004-peer-corpus-indexing.md  0005-extractor-pattern.md  0006-parallel-state-composition.md  0007-hybrid-retrieval.md  0008-redline-output-format.md  0010-hitl-gate.md  0011-async-pipeline-worker.md  0014-segmenter-limits-multi-program-brochures.md  0015-sec-iapd-url-and-ua-fragility.md  0016-review-ui.md
docs/examples/: peers-example.json  sample-report.html  sample-report.json  sample-state.json
eval/: runner.py  schemas.py
eval/fixtures/: README.md
eval/fixtures/conflicts/: item_001.json  item_002.json  item_003.json  item_004.json  item_005.json
eval/fixtures/disciplinary/: item_001.json  item_002.json  item_003.json  item_004.json  item_005.json
eval/fixtures/fee/: item_001.json  item_002.json  item_003.json  item_004.json  item_005.json
eval/fixtures/redline/: item_001.json  item_002.json
eval/fixtures/segmenter/: item_001.json
eval/fixtures/smoke/: item_001.json
eval/scorers/: __init__.py  conflicts.py  disciplinary.py  fee.py  redline.py  segmenter.py  smoke.py
scripts/: build_demo_storyboard.py
src/adv_lens/app/: main.py  observability.py  settings.py
src/adv_lens/app/graph/: cli.py  pipeline.py  state.py
src/adv_lens/app/graph/nodes/: __init__.py  extract_conflicts.py  extract_disciplinary.py  extract_fee.py  fetch.py  hitl_gate.py  retrieve_peers.py  segment.py  write_redline.py
src/adv_lens/app/jobs/: __init__.py  models.py  reaper.py  runner.py  scheduler.py
src/adv_lens/app/storage/: audit.py  db.py
src/adv_lens/app/web/: __init__.py  routes.py  seed.py
src/adv_lens/app/web/templates/: base.html.j2  decisions_panel.html.j2  review_detail.html.j2  review_list.html.j2
src/adv_lens/extractors/: __init__.py  conflicts.py  disciplinary.py  fee.py  redline.py  schemas.py
src/adv_lens/ingestion/: __init__.py  cli.py  iapd.py  iard.py  models.py
src/adv_lens/llm/: __init__.py  audit.py  client.py  cost.py
src/adv_lens/redline/: __init__.py  cli.py  render.py
src/adv_lens/redline/templates/: report.html.j2
src/adv_lens/retrieval/: __init__.py  cli.py  embeddings.py  qdrant_store.py  rerank.py  seed.py  sparse.py
src/adv_lens/segmenter/: __init__.py  base.py  cli.py  heuristic.py  llm_fallback.py  models.py  text_extract.py
tests/: test_eval_runner.py  test_extractor_conflicts.py  test_extractor_disciplinary.py  test_extractor_fee.py  test_graph_pipeline.py  test_health.py  test_hitl_gate.py  test_hybrid_retrieval.py  test_ingestion_iapd.py  test_ingestion_iard.py  test_llm_client.py  test_observability_langfuse.py  test_pipeline_jobs.py  test_pipeline_reaper.py  test_redline.py  test_redline_renderer.py  test_retrieval.py  test_retrieve_peers.py  test_review_ui.py  test_segmenter.py  test_segmenter_llm_fallback.py
