[project]
name = "adv-lens"
version = "0.1.0"
description = "Form ADV Part 2A intelligence + peer benchmarking — a LangGraph compliance-and-competitive scorecard for RIAs."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Robert Colling", email = "robert.colling@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "jinja2>=3.1",            # FastAPI Jinja2Templates + redline renderer
    "python-multipart>=0.0.20",  # required for FastAPI Form() decoding

    # Config + validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # Storage
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",

    # LLM + orchestration
    "anthropic>=0.40",
    "instructor>=1.7",
    "langgraph>=0.2.60",
    "langfuse>=2.60",

    # Retrieval
    "qdrant-client>=1.12",
    "sentence-transformers>=3.3",
    "rank-bm25>=0.2.2",

    # ADV parsing
    "pypdf>=5.1",
    "sec-parser>=0.58",
    "llama-parse>=0.5",
]

[dependency-groups]
dev = [
    "pypdfium2>=5.7.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
